<resources>
    <string name="app_name">titans_project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="create_profile">Create Profile</string>
    <string name="upload_profile_pic">Upload Profile Pic</string>
    <string name="user_type">User Type</string>
    <string name="create">Create</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number (xxx-xxx-xxxx)</string>
    <string name="checkbox_notifications">Receive notifications from Organizers and Administration</string>
    <string name="profile">Profile</string>
    <string name="edit_remove_profile_pic">Delete Profile Pic</string>
    <string name="save_changes">Save Changes</string>
    <string name="user_return">Return</string>
    <string name="optional">(Optional)</string>
    <string name="my_application_title">My Application</string>
    <string name="leave_waitlist">Leave Waitlist</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="return_to_homepage">Return to Homepage</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="result_title">Event Result</string>
    <string name="application_form">Application Form</string>
    <string name="application_submit">Submit</string>
    <string name="checkbox_application">I accept the terms and conditions</string>
    <string name="result_describe">Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result /</string>
    <string name="my_events">My Events</string>
    <string name="event_details">Event Details</string>
    <string name="geolocation_sharing_message">I agree to share my geolocation</string>
    <string name="apply">Apply</string>
    <string name="event_details_example">There is no description available for this event.</string>
    <string name="event_date_example">The Volunteering Program will kick off on November 5th, 2024, and will run every Tuesday and Thursday from 10 AM to 2 PM at the Lakeside Community Center.</string>
    <string name="my_applications">Applications</string>
    <string name="homepage">Homepage</string>
    <string name="event_update">Event Update</string>
    <string name="scan">Scan</string>
    <string name="created_events">Created Events</string>
    <string name="facility">Facility</string>
    <string name="browse_content">Browse Content</string>
    <string name="create_an_event">Create an Event</string>
    <string name="add_poster">Add Poster</string>
    <string name="facility_name">Facility Name</string>
    <string name="create_event">Create Event</string>
    <string name="date_of_event">Date of Event</string>
    <string name="limit_of_applicants">Number Limit of Applicants</string>
    <string name="there_is_no_limit_on_the_amount_of_applicants_for_this_event">There is no limit on the amount of applicants for this event</string>
    <string name="view_attendees">View Attendees</string>
    <string name="my_created_events">My Created Events</string>
    <string name="clear">Clear</string>
    <string name="notifications">Notifications</string>
    <string name="description">Description</string>
    <string name="notification_title">Notification Title</string>
    <string name="delete">Delete</string>
    <string name="admin_mode">Admin Mode</string>
    <string name="button_for_user_s_notifications">Button for user\'s notifications</string>
    <string name="date">date</string>
    <string name="notifications_0">Notifications: 0</string>
    <string name="send_notification">Send Notification</string>
    <string name="create_notification">Create Notification</string>
    <string name="insert_description">Insert Description</string>
    <string name="insert_notification_title">Insert Notification Title</string>
    <string name="organized_by_user">Organized by user</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="remove_poster">Remove Poster</string>
    <string name="notification">Notification</string>
    <string name="generate_lottery">Generate Lottery</string>
    <string name="lottery_size">Lottery Size: </string>
    <string name="won_lotteries">Won Lotteries</string>
    <string name="enroll">Enroll</string>
    <string name="decline">Decline</string>
    <string name="view_accepted_events">View Accepted Events</string>
    <string name="enrollable_events">Enrollable Events</string>
    <string name="view_lottery">View Lottery</string>
    <string name="view_waitlist">View Waitlist</string>
    <string name="view_cancelled">View Cancelled</string>
    <string name="my_attendees">My Attendees</string>
    <string name="cancelled_entrants">Cancelled Entrants</string>
    <string name="recipients">Recipients</string>
    <string name="require_geolocation_from_applicants">Require Geolocation from Applicants</string>
</resources>