<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_notification"
        android:textColor="@color/dark_gray"
        android:textSize="34sp"
        android:padding="10dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/notification_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_title"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Insert Notification Title" />

    <TextView
        android:id="@+id/notification_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Insert Notification Title" />


</LinearLayout>